# test2gis

./: .gitignore  CMakeLists.txt  README.md
cmake/: macro.cmake
qml/: main.qml
src/: app.cpp  app.h  histogrammodel.cpp  histogrammodel.h  main.cpp  wordcounter.cpp  wordcounter.h
